add and edit index1.html and exercise.html

--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,74 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project01</title>
-    </head>
-    <body>
-        
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Programming Poetry</title>
+  </head>
+  <body>
+    <h1>Der Programmierer</h1>
+
+    <p>
+      Es gibt einen Mann, der sitzt am PC und tastet schnell.<br />
+
+      Er tippt ohne Unterlass und draußen wird es schon hell
+    </p>
+
+    <p>
+      Es ist ein Programmierer, ja und er schreibt das Programm.<br />
+
+      Seine flinken Finger rasen über die Tastatur, sind fast klamm
+    </p>
+
+    <p>
+      Beide Augen, sie sind schon ganz müde und rot geworden.<br />
+
+      Die Bits und Bytes, sie werden ihn wohl noch ermorden
+    </p>
+
+    <p>
+      Oh Programmierer, du großer Meister, sieh doch mal dort!<br />
+
+      Da schleicht sich gerade unbemerkt ein Buchstabe fort.
+    </p>
+
+    <p>
+      Jetzt sitzt auch noch der Fehler auf der PC- Festplatte drin.<br />
+
+      Der Programmierer muss sichern, sonst macht's keinen Sinn.
+    </p>
+
+    <p>
+      Bleib jetzt ganz ruhig, du alter Geselle im endlosen Datenrausch.<br />
+
+      Bekommst du es hin? Du hast doch bestimmt den Bogen raus!
+    </p>
+
+    <p>
+      Und siehe da! Der Programmierer, er hat sein Programm geschafft.<br />
+
+      Am Ende will er weg vom PC, hat den Rest Nerven zusammengerafft./p>
+    </p>
+
+    <p>
+      Er steht von seinem Platz im Büro echt erleichtert aber sehr müde auf.<br />
+
+      Jetzt will er nur noch nach Haus, schaltet zufrieden den Computer aus.
+    </p>
+
+    <p>
+      Doch plötzlich ein Schrei, der Programmierer ruft laut wie besessen.<br />
+
+      Verdammt noch einmal! Ich hab' mein Programm zu saven vergessen.
+    </p>
+
+
+
+
+
+    <hr />
+
+    <footer>(c) by Heinz-Walter Hoefter</footer>
+  </body>
+</html>
